--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <title></title>
   </head>
   <body>
+
+	
     <div id="app"></div>
+
+	 	
+    <div id="slide"></div>
+
+
+
+
+
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
