--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 
 
-    <script type="module" src="/Mod-Vite/src/main.js"></script>
+	 <script type="module" src="/Mod-Vite/assets/main.js"></script>
+
   </body>
 </html>
