--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 
 
-	 <script type="module" src="/Mod-Vite/assets/main.js"></script>
-
+    <script type="module" src="/Mod-Vite/src/main.js"></script>
   </body>
 </html>
