--- a/index.html
+++ b/index.html
@@ -1,23 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/src/assets/icon/day-and-night.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <title>Mod-Vite</title>
-	 <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
+    <!-- dont change path -->
   </head>
   <body>
-
-	
     <div id="app"></div>
-
-
-
-
-
-
-  
   </body>
 </html>
