--- a/etc/1.Etc/3.sticky.html
+++ b/etc/1.Etc/3.sticky.html
@@ -19,7 +19,7 @@
     }
 
     .itopplus-sticky {
-      background: rgb(0 0 0 / 70%) !important;
+      background: #f8f4f0 !important;
     }
   }
 </style>
