--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <title>Mod-Vite</title>
-    <script type="module" src="/Mod-Vite/dist/assets/main.js"></script>
-    <!-- Ensure the base path is correct -->
+    <script type="module" src="./src/main.js"></script>
   </head>
   <body>
     <div id="App"></div>
