--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="preload" href="https://code.jquery.com/jquery-3.6.4.min.js" as="script" />
+    <meta name="description" content="Mod Vite" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" href="https://code.jquery.com/jquery-3.6.4.min.js" as="script" />
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" defer></script>
     <title>Mod-Vite</title>
     <script type="module" src="./src/main.js"></script>
