--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" defer></script>
     <title>Mod-Vite</title>
     <script type="module" src="./src/main.js"></script>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+    </style>
   </head>
 
   <body>
