--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preload" href="https://code.jquery.com/jquery-3.6.4.min.js" as="script" />
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
     <title>Mod-Vite</title>
     <script type="module" src="./src/main.js"></script>
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-    </style>
   </head>
 
   <body>
