--- a/index.html
+++ b/index.html
@@ -12,7 +12,5 @@
     <script type="module" src="./src/main.js"></script>
   </head>
 
-  <body>
-    <div id="App"></div>
-  </body>
+  <body id="App"></body>
 </html>
